--- a/themes/growth-sketch/assets/scss/main.scss
+++ b/themes/growth-sketch/assets/scss/main.scss
@@ -6,52 +6,24 @@
 @import './themes/index';
 @import './vendors/index';
 
-body{
-    // background-color: darkcyan;
+body {
+  // background-color: darkcyan;
 }
 
 .contact-section {
-    background: linear-gradient(84deg, rgba(10, 27, 36, 1) 51%, rgba(0, 64, 128, 1) 100%);
-    // padding: 50px 0;
-  
-    .contact-left-bg{
-        background: $secondary-clr url(/images/contact-us-bg.jpg) no-repeat center/cover;
-        background-blend-mode: overlay;
-    }
-    // .contact-info {
-    //   background-color: rgba(0, 0, 0, 0.5); // Semi-transparent background for contrast
-    //   border: 1px solid rgba(255, 255, 255, 0.2);
-    //   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    // }
-  
-    .contact-form {
-    //   background-color: rgba(255, 255, 255, 0.9);
-      height: 100%;
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  
-      .form-control {
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        &:focus {
-          outline: none;
-          border-color: rgba(0, 64, 128, 1);
-          box-shadow: 0 0 5px rgba(0, 64, 128, 0.5);
-        }
-      }
-  
-      .btn-primary {
-        background-color: rgba(0, 64, 128, 1);
-        border: none;
-        &:hover {
-          background-color: rgba(0, 50, 100, 1);
-        }
-      }
-    }
-  }
-  
-  .form{
-    min-height: 60vh;
+  .contact-left-bg {
+    background: url(/images/contact-us-bg.jpg) no-repeat center/cover;
+    // background-blend-mode: overlay;
+    border-radius: 25px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    background-color: #0a1b24;
+    box-shadow: inset 20px 20px 60px #0a1b24,
+                inset -20px -20px 60px #0a1b24;
   }
 
+  .contact-form {
+    height: 100%;
 
-  
+  }
+}
