--- a/themes/growth-sketch/layouts/partials/footer.html
+++ b/themes/growth-sketch/layouts/partials/footer.html
@@ -1,19 +1,4 @@
-<!-- <footer class="text-center text-lg-start">
-    <div class="container p-4">
-      <section class="mb-4">
-        <p>Phone: +91-9962006364 | Email: link2rmd@gmail.com</p>
-        <p>© 2024 ESPeople. All rights reserved. Sketched with love by TenSketch</p>
-        <div>
-          <a href="#" class="me-3">Facebook</a>
-          <a href="#" class="me-3">Instagram</a>
-          <a href="#">LinkedIn</a>
-        </div>
-      </section>
-    </div>
-  </footer>
-   -->
-
-   <footer class="footer">
+<footer class="footer">
     <div class="container text-center">
         <div class="footer-logo">
             <img src="/images/logo.png" alt="ESPeople Logo" class="logo-img">
@@ -22,7 +7,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/about-us">About us</a>
             </li>
-    <!-- <li class="nav-item">
+            <!-- <li class="nav-item">
         <a class="nav-link" href="#">Blog</a>
     </li> -->
             <!-- <li class="nav-item">
@@ -32,9 +17,9 @@
                 <a class="nav-link" href="/other-l-and-d-services">Other L&D</a>
             </li>
             <!-- our training programs -->
-             <li class="nav-item d-none">
-              <a class="nav-link" href="#">Training Programs</a>
-             </li>
+            <li class="nav-item d-none">
+                <a class="nav-link" href="#">Training Programs</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/contact-us">Contact us</a>
             </li>
@@ -45,13 +30,14 @@
             <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
             <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
             <!-- youtube -->
-             <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
             <!-- linkedin -->
-             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
         </div>
 
         <p class="footer-copyright">
-            © 2024 ESPeople. All rights reserved. Sketched with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://www.tensketch.com/" title="TenSketch website">TenSketch</a>
+            © 2024 ESPeople. All rights reserved. Sketched with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+                href="https://www.tensketch.com/" title="TenSketch website">TenSketch</a>
         </p>
     </div>
 </footer>
