--- a/themes/growth-sketch/assets/scss/base/_reset.scss
+++ b/themes/growth-sketch/assets/scss/base/_reset.scss
@@ -43,10 +43,10 @@ li {
 a {
     text-decoration: none;
     color: $primary-clr--dark;
-    // &:hover{
+    &:hover{
 
-    //     text-decoration: none;
-    // }
+        text-decoration: underline;
+    }
 }
 
 img {
