--- a/themes/growth-sketch/layouts/_default/single.html
+++ b/themes/growth-sketch/layouts/_default/single.html
@@ -586,7 +586,7 @@
           <h5>Address:</h5>
           <p><strong>Main office:</strong></p>
           <address>281 KH Road, Ayanavaram, Chennai 600023.</address>
-          <p><strong>Branch office:</strong></p>
+          <p><strong>Registered office:</strong></p>
           <address>55/S2, 1st main road, venkataraman nagar, Chromepet, Chennai 600040</address>
           <h5>Mobile #:</h5>
           <a class="text-white" href="tel:+919962006364">+91 9962006364</a>
