--- a/themes/growth-sketch/layouts/_default/baseof.html
+++ b/themes/growth-sketch/layouts/_default/baseof.html
@@ -42,6 +42,9 @@
   })(window, document, "script", "https://waw.gallabox.com");
   </script> -->
   <!-- End Chat widget -->
+
+{{ partialCached "head/js.html" . }}
+
 </body>
 
 </html>
