--- a/themes/growth-sketch/layouts/partials/head/js.html
+++ b/themes/growth-sketch/layouts/partials/head/js.html
@@ -8,6 +8,8 @@
   });
 </script> -->
 
+<!-- AOS JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
 {{- with resources.Get "js/main.js" }}
   {{- if eq hugo.Environment "development" }}
